[package]
name = "barrel"
version = "0.2.7"

description = "A powerful schema migration building API for Rust"
authors = ["Katharina Fey <kookie@spacekookie.de>"]
license = "MIT/X11 OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/spacekookie/barrel"
documentation = "https://docs.rs/barrel"

categories = [ "database", "development-tools"]
keywords = ["sql", "database", "schema", "migration"]

[[example]]
name = "pg_strings"
required-features = ["pg"]

[[example]]
name = "sqlite_strings"
required-features = ["sqlite3"]

[features]
default = []
diesel-filled = ["tempdir", "diesel"]
sqlite3 = []
pg = []

# Enables unstable (in-development) features, 
#   even for stable version upgrades
unstable = []


[dependencies]
tempdir = { version = "0.3.4", optional = true }
diesel = { version = ">= 1.1, < 2.0", default_features = false, optional = true }

[package.metadata.docs.rs]

# We need to explicitly toggle features here because
#   `all-features` causes weird transient bugs
features = ["diesel-filled", "sqlite3", "pg", "unstable"]
