[package]
name = "barrel"
version = "0.5.7-alpha.0"

description = "A powerful schema migration building API for Rust"
authors = ["Katharina Fey <kookie@spacekookie.de>", "Rob Rowe <rippinrobr@gmail.com>"]
license = "MIT/X11 OR Apache-2.0"
edition = "2018"

readme = "README.md"
repository = "https://github.com/rust-db/barrel"
website = "https://rust-db.github.io/barrel"
documentation = "https://docs.rs/barrel"

categories = [ "database", "development-tools"]
keywords = ["sql", "database", "schema", "migration"]

[[example]]
name = "pg_strings"
required-features = ["pg"]

[[example]]
name = "sqlite_strings"
required-features = ["sqlite3"]

[features]
default = []
diesel = ["tempdir", "diesel_rs"]
sqlite3 = []
mysql = []
pg = []

# Enables unstable (in-development) features,
#   even for stable version upgrades
unstable = []


[dependencies]
tempdir = { version = "0.3.4", optional = true }
diesel_rs = { version = ">= 1.2, < 2.0", package = "diesel", default_features = false, optional = true }

[package.metadata.docs.rs]

# We can't build documentation with the `diesel` flag enabled
# because then the project no longer builds.
features = ["mysql", "sqlite3", "pg", "unstable"]
